--- a/events/logicloom2/assets/style.css
+++ b/events/logicloom2/assets/style.css
@@ -110,7 +110,7 @@ h6 {
   width: 100%;
   height: 100%;
   overflow: visible;
-  background: white url(/assets/preloader3.gif) no-repeat center center;
+  background: white url(assets/preloader3.gif) no-repeat center center;
 }
 
 /*--------------------------------------------------------------
@@ -528,7 +528,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url(/assets/img/banners/feedback4.jpg) top center;
+  background: url(assets/img/banners/feedback4.jpg) top center;
   background-size: cover;
   overflow: hidden;
   position: relative;
@@ -1250,7 +1250,7 @@ h6 {
 --------------------------------------------------------------*/
 #supporters {
   padding: 60px 0;
-  background: url('/assets/img/supporters/background.jpg') center/cover no-repeat;
+  background: url('assets/img/supporters/background.jpg') center/cover no-repeat;
 }
 
 #supporters .supporters-wrap {
