--- a/events/logicloom2/assets/style.css
+++ b/events/logicloom2/assets/style.css
@@ -110,7 +110,7 @@ h6 {
   width: 100%;
   height: 100%;
   overflow: visible;
-  background: white url(assets/preloader3.gif) no-repeat center center;
+  background: white url(preloader3.gif) no-repeat center center;
 }
 
 /*--------------------------------------------------------------
@@ -528,7 +528,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url(assets/img/banners/feedback4.jpg) top center;
+  background: url(img/banners/feedback4.jpg) top center;
   background-size: cover;
   overflow: hidden;
   position: relative;
@@ -1091,7 +1091,7 @@ h6 {
 }
 
 #venue .venue-info {
-  background: url("../img/venue-info-bg.jpg") top center no-repeat;
+  background: url("festbackground.png") top center no-repeat;
   background-size: cover;
   position: relative;
   padding-top: 60px;
