--- a/assets/css/ud-styles.css
+++ b/assets/css/ud-styles.css
@@ -1213,13 +1213,7 @@ p {
 .ud-team {
   padding-top: 120px;
   padding-bottom: 80px;
-}
-
-@media (max-width: 767px) {
-  .ud-team {
-    padding-top: 80px;
-    padding-bottom: 40px;
-  }
+  background: #f3f4fe;
 }
 
 .ud-single-team {
