--- a/events/logicloom2/assets/style.css
+++ b/events/logicloom2/assets/style.css
@@ -702,7 +702,7 @@ h6 {
 # About Section
 --------------------------------------------------------------*/
 #about {
-  background: url("/assets/img/banners/feedback2.jpg");
+  background: url("img/banners/feedback2.jpg");
   background-size: cover;
   overflow: hidden;
   position: relative;
